--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "2.0.1-rc.1",
   "author": "mParticle Developers <developers@mparticle.com> (https://www.mparticle.com)",
   "description": "mParticle integration sdk for Inspectlet",
-  "browser": "npm/Inspectlet.js",
+  "browser": "dist/Inspectlet.common.js",
   "files": [
-    "npm/Inspectlet.js"
+    "dist/Inspectlet.common.js"
   ],
   "repository": "https://github.com/mparticle-integrations/mparticle-javascript-integration-inspectlet",
   "scripts": {
