--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@mparticle/web-inspectlet-kit",
-  "version": "2.0.0-rc.2",
+  "version": "2.0.1",
   "author": "mParticle Developers <developers@mparticle.com> (https://www.mparticle.com)",
   "description": "mParticle integration sdk for Inspectlet",
+  "main": "dist/Inspectlet.common.js",
   "browser": "dist/Inspectlet.common.js",
   "files": [
     "dist/Inspectlet.common.js"
